--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Dancing+Script:wght@400..700&family=Merienda:wght@300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/css/all.css"></script>
@@ -39,9 +43,15 @@
               </div>
             </div>
           </header>
+          
+          <div class="entre-em-contato">
+            <a class="botao-contato" href="https://wa.me/5511966009888" target="_blank" title="Entre em contato">Entre em contato</a>
+          </div>
+
           <div class="imagem-logo">
             <img class="logo" src="./src/img/mini-logo.png" alt="Logo da Página">
           </div>
+
           <main>
 
             <section class="sobre" id="sobre">
@@ -50,12 +60,14 @@
               <div class="fundo-retangulo-sobre">
                 <p>Formada no ano de xxxx pela Faculdade Tanãnãn de Tal Lugar, a Dra Monise Ferrari é especialista em
                   pediatria pelo Hospital X de Portugual. Pós-Graduada em Especialidade pela universidade taltaltal. Formada
-                  desde o ano de xxxx vem atuando na área e se especializando em Piriri. Em sua trajetória médica já passou
-                  pelos hospitais Fulano, no ano de xxxx onde foi responsável técnica da pediatria. Em xxxx foi para o
-                  hospital Ciclano e lá atuou como Médica residente durante 2 anos. Por anos vem atendendo em rede pública na
-                  Clínica Médica. Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sapiente omnis eius explicabo reprehenderit? Exercitationem architecto laborum eveniet sunt. Aspernatur nihil dolorum magni fuga non eaque aliquam dolores voluptatem? Saepe.</p>
+                  desde o ano de xxxx  adipisicing elit. Assumenda sapiente omnis eius explicabo reprehenderit? Exercitationem architecto laborum eveniet sunt. Aspernatur nihil dolorum magni fuga non eaque aliquam dolores voluptatem? Saepe.</p>
               </div>
             </section>
+
+            <div class="entre-em-contato">
+              <a class="botao-contato" href="https://wa.me/5511966009888" target="_blank" title="Entre em contato">Entre em contato</a>
+            </div>
+
             <div class="imagem-logo">
               <img class="logo" src="./src/img/mini-logo.png" alt="Logo da Página">
             </div>
@@ -84,7 +96,7 @@
                     <p>Pode ser diário, mas também pode ser realizado de 2 a 3 vezes por semana, com produtos de higiene
                       adequados para a pele do recém-nascido.</p>
                   </div>
-                  <div class="cards1">
+                  <!-- <div class="cards1">
                     <h2>CONTATO</h2>
                     <p>Evite que muitas pessoas tenham contato com o bebê nos primeiros dias de vida</p>
                   </div>
@@ -92,10 +104,14 @@
                     <h2>SONO</h2>
                     <p>Recém-nascidos dormem muitas horas por dia. Certifique-se de que o bebê esteja dormindo em um lugar
                       seguro e confortável, como um berço.</p>
-                  </div>
+                  </div> -->
                 </div> 
               </div>
             </section>
+
+            <div class="entre-em-contato">
+              <a class="botao-contato" href="https://wa.me/5511966009888" target="_blank" title="Entre em contato">Entre em contato</a>
+            </div>
 
             <div class="imagem-logo">
               <img class="logo" src="./src/img/mini-logo.png" alt="Logo da Página">
@@ -130,6 +146,11 @@
                 </div>
               </div>
             </section>
+
+            <div class="entre-em-contato">
+              <a class="botao-contato" href="https://wa.me/5511966009888" target="_blank" title="Entre em contato">Entre em contato</a>
+            </div>
+
             <div class="imagem-logo">
               <img class="logo" src="./src/img/mini-logo.png" alt="Logo da Página">
             </div>
