--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dra. Monise Ferrari - Pediatra</title>
-    <link rel="stylesheet" href="./src/style.css">
     <link rel="shortcut icon" href="./src/img/mini-logo.png" type="image/x-icon" title="Dra. Monise Ferrari">
-    <link rel="stylesheet" href="./src/responsividade.css">
+    <link rel="stylesheet" href="./src/style.css">
+    <!-- <link rel="stylesheet" href="./src/responsividade.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
@@ -18,8 +18,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/css/all.css"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/css/all.css"></script>
 
   </head>
 
@@ -35,8 +35,8 @@
             </nav>
             <div class="inicio" id="inicio">
               <div class="central">
-                <h2 class="nome">DRA. MONISE</h2>
-                <h2 class="sobrenome">FERRARI</h2>
+                <h2 class="nome">Dra. Monise</h2>
+                <!-- <h2 class="sobrenome">Ferrari</h2> -->
                 <!-- <img class="foto-inicial" src="./src/img/monise-profile.png" alt="Dra Monise Ferrari" title="DRA. MONISE FERRARI"> -->
                 <h3>PEDIATRA</h3>
                 <h4>CRM-SP 227385</h4>
