--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conheça a Dra. Monise Ferrari, pediatra em São Bernardo do Campo. Oferecemos cuidados especializados para bebês e crianças, incluindo orientações sobre amamentação, vacinação e cuidados com o recém-nascido. Marque uma consulta hoje mesmo! Não perca tempo!">
     <title>Dra. Monise Ferrari - Pediatra</title>
     <link rel="shortcut icon" href="./src/img/mini-logo.png" type="image/x-icon" title="Dra. Monise Ferrari">
     <link rel="stylesheet" href="./src/style.css">
