--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <meta name="description" content="Conheça a Dra. Monise Ferrari, pediatra em São Bernardo do Campo. Oferecemos cuidados especializados para bebês e crianças, incluindo orientações sobre amamentação, vacinação e cuidados com o recém-nascido. Marque uma consulta hoje mesmo! Não perca tempo!">
     <title>Dra. Monise Ferrari - Pediatra</title>
     <link rel="shortcut icon" href="./src/img/mini-logo.png" type="image/x-icon" title="Dra. Monise Ferrari">
-    <link rel="stylesheet" href="./src/style.css">
-    <link rel="stylesheet" href="./src/responsividade.css">
+    <link rel="stylesheet" href="./src/style.css" async>
+    <link rel="stylesheet" href="./src/responsividade.css" media="screen and (max-width: 1030px)" async>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Great+Vibes&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Dancing+Script:wght@400..700&family=Merienda:wght@300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" async>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/css/all.css"></script>
 
