Ajustes: adc icones de rede social no footer; mudei a posição das divs na section contato; e alterei o valor do scroll-margin-top nas classes

--- a/index.html
+++ b/index.html
@@ -114,13 +114,6 @@
             <section class="contato" id="contato">
               <div class="columns">
                 <div class="column">
-                    <div class="fundo-retangulo-contato">
-                        <img src="./src/img/monise-profile.png" alt="Dra Monise Ferrari" class="foto-final" title="DRA. MONISE FERRARI">
-                        <h2 class="nome-contato">Dra. Monise</h2>
-                        <h2 class="sobrenome-contato">Ferrari</h2>
-                    </div>
-                </div>
-                <div class="column">
                   <div class="icones">
                     <h2 class="titulo-section">CONTATOS</h2>
                     <div><i class="fab fa-whatsapp"><a href="https://wa.me/5511966009888" title="WhatsApp" target="_blank"> (11) 96600-9888</a></i></div>
@@ -131,12 +124,20 @@
                 <div class="column">
                   <div class="endereco">
                       <h2 class="titulo-section">CONSULTÓRIO</h2>
+                      
                       <iframe class="mapa"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.484743280837!2d-46.572905724666846!3d-23.658616878733103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce433e17a42003%3A0x212455ea378f1362!2sR.%20Formosa%2C%2055%20-%20Rudge%20Ramos%2C%20S%C3%A3o%20Bernardo%20do%20Campo%20-%20SP%2C%2009626-060!5e0!3m2!1spt-BR!2sbr!4v1712804006102!5m2!1spt-BR!2sbr"
                         style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
-                      <p><a href="https://www.google.com/maps/place/R.+Formosa,+55+-+Rudge+Ramos,+S%C3%A3o+Bernardo+do+Campo+-+SP,+09626-060/data=!4m2!3m1!1s0x94ce433e17a42003:0x212455ea378f1362?sa=X&ved=1t:242&ictx=111" target="_blank">Rua Formosa, 55, </a><br> Rudge Ramos, <br> São Bernando do Campo - SP <br> CEP 09626-060</p>
+                      <p><a href="https://www.google.com/maps/place/R.+Formosa,+55+-+Rudge+Ramos,+S%C3%A3o+Bernardo+do+Campo+-+SP,+09626-060/data=!4m2!3m1!1s0x94ce433e17a42003:0x212455ea378f1362?sa=X&ved=1t:242&ictx=111" target="_blank">CLIQUE AQUI</a><br>Rua Formosa - n°55<br>Rudge Ramos<br>São Bernando do Campo - SP <br>CEP 09626-060</p>
                   </div>
+                </div>
+                <div class="column">
+                    <div class="fundo-retangulo-contato">
+                        <img src="./src/img/monise-profile.png" alt="Dra Monise Ferrari" class="foto-final" title="DRA. MONISE FERRARI">
+                        <h2 class="nome-contato">Dra. Monise</h2>
+                        <h2 class="sobrenome-contato">Ferrari</h2>
+                    </div>
                 </div>
               </div>
             </section>
@@ -153,9 +154,13 @@
           <footer class="rodape">
             <p class="crm">crm-sp 227385</p>
             <p>DRA. MONISE FERRARI</p>
-            <br>
+            <div class="rede-social-rodape">
+              <a href="https://wa.me/5511966009888" target="_blank" title="WhatsApp"><img class="whatsapp" src="./src/icones/whatsapp.png" alt="Contato WhatsApp"></a>
+              <a href="https://www.instagram.com/dra_monise?igsh=bHNxcnMwdzZucDJq" target="_blank" title="Instagram"><img class="instagram" src="./src/icones/instagram.png" alt="Contato WhatsApp"></a>
+            </div>
+            
             <p>&copy; Todos os Direitos Reservados</p>
-            <p>Desenvolvido por <a href="https://www.linkedin.com/in/thiagomelop/" title="Linkedin - @thiagomelop">@thiagomelop</a></p>
+            <p>Desenvolvido por <a href="https://www.linkedin.com/in/thiagomelop/" title="Linkedin - @thiagomelop" target="_blank">@thiagomelop</a></p>
           </footer>
         </div>
         <script src="./src/script.js"></script>
