Criei icones de contato no footer e no campo 'CONTATOS' para uma melhor visualização

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 <div class="column">
                   <div class="icones">
                     <h2 class="titulo-section">CONTATOS</h2>
-                    <div><i class="fab fa-whatsapp"><a href="https://wa.me/5511966009888" title="WhatsApp" target="_blank"> (11) 96600-9888</a></i></div>
-                    <div><i class="fas fa-phone"><a href="tel:+551143671515" title="Telefone">  (11) 4367-1515</a></i></div>
-                    <div><i class="fab fa-instagram"><a href="https://www.instagram.com/dra_monise?igsh=bHNxcnMwdzZucDJq" title="Instagram" target="_blank"> dra_monise</a></i></div>
+                    <div><a href="https://wa.me/5511966009888" title="WhatsApp" target="_blank"><img class="icone-contato" src="./src/icones/whatsapp.png" alt="WhatasApp">(11) 96600-9888</a></div>
+                    <div><a href="tel:+551143671515" title="Telefone"><img class="icone-contato" src="./src/icones/telefone.png" alt="">(11) 4367-1515</a></div>
+                    <div><a href="https://www.instagram.com/dra_monise?igsh=bHNxcnMwdzZucDJq" title="Instagram" target="_blank"><img class="icone-contato" src="./src/icones/instagram.png" alt="">dra_monise</a></i></div>
                   </div>
                 </div>
                 <div class="column">
@@ -156,6 +156,7 @@
             <p>DRA. MONISE FERRARI</p>
             <div class="rede-social-rodape">
               <a href="https://wa.me/5511966009888" target="_blank" title="WhatsApp"><img class="whatsapp" src="./src/icones/whatsapp.png" alt="Contato WhatsApp"></a>
+              <a href="tel:+551143671515" target="_blank" title="Telefone"><img class="instagram" src="./src/icones/telefone.png" alt="Contato WhatsApp"></a>
               <a href="https://www.instagram.com/dra_monise?igsh=bHNxcnMwdzZucDJq" target="_blank" title="Instagram"><img class="instagram" src="./src/icones/instagram.png" alt="Contato WhatsApp"></a>
             </div>
             
