Edição da seção sobre, estilização dos icones do rodapé e exclusão do 'card' de img da seção contato

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Conheça a Dra. Monise Ferrari, pediatra em São Bernardo do Campo. Oferecemos cuidados especializados para bebês e crianças, incluindo orientações sobre amamentação, vacinação e cuidados com o recém-nascido. Marque uma consulta hoje mesmo! Não perca tempo!">
     <title>Dra. Monise Ferrari - Pediatra</title>
-    <link rel="shortcut icon" href="./src/img/mini-logo.png" type="image/x-icon" title="Dra. Monise Ferrari">
+    <link rel="shortcut icon" href="./src/icones/estetoscopio.png" type="image/x-icon" title="Dra. Monise Ferrari">
     <link rel="stylesheet" href="./src/style.css" async>
     <link rel="stylesheet" href="./src/responsividade.css" media="screen and (max-width: 1030px)" async>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,9 +52,16 @@
 
             <section class="sobre" id="sobre">
               <h2 class="titulo-section">SOBRE A</h2>
-              <h2 class="sub-titulo-section">DRA MONISE</h2>
+              <h2 class="sub-titulo-section">DRA. MONISE</h2>
               <div class="fundo-retangulo-sobre">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem sapiente enim alias quia, non doloremque, beatae assumenda necessitatibus, quaerat quas distinctio quae voluptatibus saepe reprehenderit et dicta facere deleniti accusamus. Culpa dolorum voluptatibus sed? Ea atque dolore ducimus, sed vel dolores omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis rerum perspiciatis corporis tenetur velit minus id itaque excepturi ab natus assumenda explicabo, qui voluptate consequuntur blanditiis aperiam accusantium maxime eveniet quisquam suscipit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor rerum explicabo quia quam, dignissimos libero laboriosam. Ipsam, officiis quae! Perspiciatis tenetur exercitationem quasi optio labore?</p>
+                <h3>Formação e Reconhecimento</h3>
+                  <p>Formada pela Universidade São Camilo, a Dra. Monise se destacou como a melhor aluna de sua turma. Seu nome é sinônimo de excelência na área pediátrica.</p>
+                <h3>Experiência Internacional</h3>
+                  <p>Ela acumulou experiência em hospitais pediátricos em Coimbra, Portugal. Essa vivência internacional a torna ainda mais qualificada para cuidar das crianças.</p>
+                <h3>Consultório Acolhedor</h3>
+                  <p>O consultório da Dra. Monise é um espaço moderno e acolhedor. Ela recebe seus pacientes com carinho e dedicação, criando um ambiente onde as crianças se sentem à vontade. Seu consultório é um lugar onde o carinho e o amor pela profissão se refletem em cada atendimento.</p>
+                <h3>Prevenção e Orientação</h3>
+                  <p>Dra. Monise acredita na importância da prevenção, pois ela orienta os pais de forma clara e acessível sobre os cuidados com a saúde infantil. Mais do que uma médica, ela é uma aliada das famílias, ajudando a construir um futuro saudável para as crianças que atende.</p>
               </div>
             </section>
 
@@ -69,7 +76,7 @@
             <section class="dicas" id="dicas">
               <div class="fundo-retangulo-dicas"> <!--Não usado-->
                 <h2 class="titulo-section-dicas">DICAS DA</h2>
-                <h2 class="sub-titulo-section-dicas">DRA MONISE PARA AS MAMÃES DE RECEM-NASCIDOS</h2>
+                <h2 class="sub-titulo-section-dicas">DRA. MONISE PARA AS MAMÃES DE RECEM-NASCIDOS</h2>
                 <div class="grid-container">
                   <div class="cards1">
                     <h2>AMAMENTAÇÃO</h2>
@@ -133,11 +140,11 @@
                   </div>
                 </div>
                 <div class="column">
-                    <div class="fundo-retangulo-contato">
+                    <!-- <div class="fundo-retangulo-contato">
                         <img src="./src/img/monise-profile.png" alt="Dra Monise Ferrari" class="foto-final" title="DRA. MONISE FERRARI">
                         <h2 class="nome-contato">Dra. Monise</h2>
                         <h2 class="sobrenome-contato">Ferrari</h2>
-                    </div>
+                    </div> -->
                 </div>
               </div>
             </section>
@@ -156,7 +163,7 @@
             <p>DRA. MONISE FERRARI</p>
             <div class="rede-social-rodape">
               <a href="https://wa.me/5511966009888" target="_blank" title="WhatsApp"><img class="whatsapp" src="./src/icones/whatsapp.png" alt="Contato WhatsApp"></a>
-              <a href="tel:+551143671515" target="_blank" title="Telefone"><img class="instagram" src="./src/icones/telefone.png" alt="Contato WhatsApp"></a>
+              <a href="tel:+551143671515" target="_blank" title="Telefone"><img class="telefone" src="./src/icones/telefone.png" alt="Contato WhatsApp"></a>
               <a href="https://www.instagram.com/dra_monise?igsh=bHNxcnMwdzZucDJq" target="_blank" title="Instagram"><img class="instagram" src="./src/icones/instagram.png" alt="Contato WhatsApp"></a>
             </div>
             
